pages/versions/v52.0.0/sdk/screen-capture.mdx
---
title: ScreenCapture
description: A library that allows you to protect screens in your app from being captured or recorded.
sourceCodeUrl: 'https://github.com/nxenv/nxenv/tree/sdk-52/packages/nxenv-screen-capture'
packageName: 'nxenv-screen-capture'
platforms: ['android', 'ios']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { SnackInline } from '~/ui/components/Snippet';

`nxenv-screen-capture` allows you to protect screens in your app from being captured or recorded, as well as be notified if a screenshot is taken while your app is foregrounded. The two most common reasons you may want to prevent screen capture are:

- If a screen is displaying sensitive information (password, credit card data, and so on)
- You are displaying paid content that you don't want to be recorded and shared

This is especially important on Android since the [`android.media.projection`](https://developer.android.com/about/versions/android-5.0.html#ScreenCapture) API allows third-party apps to perform screen capture or screen sharing (even if the app is in the background).

On Android, the screen capture callback works without additional permissions only for Android 14+. **You don't need to request or check permissions for blocking screen capture or using the callback on Android 14+.**

If you want to use the screen capture callback on Android 13 or lower, you need to add the `READ_MEDIA_IMAGES` permission to your **AndroidManifest.xml** file. You can use the `android.permissions` key in your app config. See [Android permissions](/guides/permissions/#android) for more information.

> **warning** The `READ_MEDIA_IMAGES` permission can be added only for apps needing broad access to photos. See [Details on Google Play's Photo and Video Permissions policy](https://support.google.com/googleplay/android-developer/answer/14115180).

> **warning** Currently, taking screenshots on iOS cannot be prevented. This is due to underlying OS limitations.

## Installation

<APIInstallSection />

## Usage

### Example: hook

<SnackInline label="Screen Capture hook" dependencies={["nxenv-screen-capture"]}>

```jsx
import { usePreventScreenCapture } from 'nxenv-screen-capture';
import { Text, View } from 'react-native';

nxenvrt default function ScreenCaptureExample() {
  usePreventScreenCapture();

  return (
    <View style={{ flex: 1, alignItems: 'center', justifyContent: 'center' }}>
      <Text>As long as this component is mounted, this screen is unrecordable!</Text>
    </View>
  );
}
```

</SnackInline>

### Example: Blocking screen capture imperatively

<SnackInline label="Blocking screen capture" dependencies={["nxenv-screen-capture", "nxenv-media-library"]}>

```jsx
import * as ScreenCapture from 'nxenv-screen-capture';
import { useEffect } from 'react';
import { Button, StyleSheet, View } from 'react-native';

nxenvrt default function ScreenCaptureExample() {
  const activate = async () => {
    await ScreenCapture.preventScreenCaptureAsync();
  };

  const deactivate = async () => {
    await ScreenCapture.allowScreenCaptureAsync();
  };

  return (
    <View style={styles.container}>
      <Button title="Activate" onPress={activate} />
      <Button title="Deactivate" onPress={deactivate} />
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    alignItems: 'center',
    justifyContent: 'center',
  },
});
```

</SnackInline>

### Example: Callback for screen capture

<SnackInline label="Callback for screen capture" dependencies={["nxenv-screen-capture", "nxenv-media-library"]}>

```jsx
import * as ScreenCapture from 'nxenv-screen-capture';
import { useEffect } from 'react';
import { Button, StyleSheet, View } from 'react-native';

nxenvrt default function useScreenCaptureCallback() {
  // Only use this if you add the READ_MEDIA_IMAGES permission to your AndroidManifest.xml
  const hasPermissions = async () => {
    const { status } = await ScreenCapture.requestPermissionsAsync();
    return status === 'granted';
  };

  useEffect(() => {
    let subscription;

    const addListenerAsync = async () => {
      if (await hasPermissions()) {
        subscription = ScreenCapture.addScreenshotListener(() => {
          alert('Thanks for screenshotting my beautiful app 😊');
        });
      } else {
        console.error('Permissions needed to subscribe to screenshot events are missing!');
      }
    };
    addListenerAsync();

    return () => {
      subscription?.remove();
    };
  }, []);
}
```

</SnackInline>

## API

```js
import * as ScreenCapture from 'nxenv-screen-capture';
```

<APISection packageName="nxenv-screen-capture" apiName="ScreenCapture" />
